--- a/src/components/Search/searchSlides.module.css
+++ b/src/components/Search/searchSlides.module.css
@@ -1,100 +1,191 @@
 .container {
-    margin: auto;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    background-color: #C9CCD4;
-    padding-top: 35px;
-    padding-bottom: 30px;
-    border-radius: 5px;
+  margin: auto;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  background-color: #c9ccd4;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  border-radius: 5px;
 }
 
 .leftContainer {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
 .buttonLoad {
-    margin-top: 70px;
-    border: none;
-    background-color: #576A9A;
-    color: white;
-    padding: 15px 60px;
-    border-radius: 20px;
-    font-size: larger;
-    font-weight: 600;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    cursor: pointer;
-    text-align: center;
+  margin-top: 70px;
+  border: none;
+  background-color: #576a9a;
+  color: white;
+  padding: 15px 60px;
+  border-radius: 20px;
+  font-size: larger;
+  font-weight: 600;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  cursor: pointer;
+  text-align: center;
 }
 
 .buttonLoad:hover {
-    background-color: #445379;
+  background-color: #445379;
 }
 
 .imageContainer {
-    width: 70%;
-    background-color: #726A6A;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+  width: 70%;
+  background-color: #726a6a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .rightContainer {
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
 .inputContainer {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .input {
-    width: 17vw;
-    height: 35px;
-    margin-right: 15px;
-    margin-bottom: 30px;
-    border-radius: 20px;
-    border: none;
-    padding-left: 10px;
-    padding-right: 5px;
-    font-size: 17px;
-    font-weight: 500;
+  width: 17vw;
+  height: 35px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  border: none;
+  padding-left: 10px;
+  padding-right: 5px;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 .input::-webkit-input-placeholder {
-    color: gray;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: gray;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .buttonContainerNext {
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .buttonNext {
-    margin-right: 10%;
-    border: none;
-    background-color: #7A9CF4;
-    color: white;
-    padding: 15px 70px;
-    border-radius: 20px;
-    font-size: x-large;
-    font-weight: 600;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    cursor: pointer;
-    text-align: center;
+  margin-right: 10%;
+  border: none;
+  background-color: #7a9cf4;
+  color: white;
+  padding: 15px 70px;
+  border-radius: 20px;
+  font-size: x-large;
+  font-weight: 600;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  cursor: pointer;
+  text-align: center;
+}
+
+.inputFile {
+  margin-top: 30px;
+  position: relative;
+  display: inline-block;
+}
+.inputFile span {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  font-size: 14px;
+  vertical-align: middle;
+  color: rgb(255 255 255);
+  text-align: center;
+  border-radius: 4px;
+  background-color: #7a9cf4;
+  line-height: 22px;
+  height: 40px;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
+  transition: background-color 0.2s;
+}
+.inputFile input[type="file"] {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  display: block;
+  width: 0;
+  height: 0;
+}
+
+@media (max-width: 1320px) {
+  .image {
+    width: 200px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .imageContainer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 900px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .leftContainer {
+    width: 70%;
+    margin-bottom: 30px;
+  }
+
+  .rightContainer {
+    width: 70%;
+  }
+}
+
+@media (max-width: 700px) {
+  .leftContainer {
+    width: 80%;
+  }
+
+  .input {
+    width: 20vw;
+  }
+
+  .rightContainer {
+    width: 85%;
+  }
+}
+
+@media (max-width: 500px) {
+  .leftContainer {
+    width: 100%;
+  }
+
+  .input {
+    width: 30vw;
+  }
+
+  .rightContainer {
+    width: 100%;
+  }
 }
