--- a/src/components/userInfo/userInfo.module.css
+++ b/src/components/userInfo/userInfo.module.css
@@ -1,94 +1,140 @@
 .userContainer {
-    width: 90%;
-    margin: auto;
-    display: flex;
-    background-color: #C9CCD4;
-    margin-top: 70px;
-    border-radius: 15px;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  background-color: #c9ccd4;
+  margin-top: 70px;
+  border-radius: 15px;
 }
 
 .leftContainer {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    padding: 30px 20px 30px 20px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 30px 20px 30px 20px;
 }
 
 .iconContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-    background-color: #726A6A;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  background-color: #726a6a;
 }
 
 .icon {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 }
 
 .buttonContainer {
-    margin-top: 60px;
-    background-color: #95ADEB;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px 40px;
-    border-radius: 25px;
-    cursor: pointer;
+  margin-top: 60px;
+  background-color: #95adeb;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 20px 40px;
+  border-radius: 25px;
+  cursor: pointer;
 }
 
 .buttons {
-    background-color: inherit;
-    border: none;
-    margin-right: 15px;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    cursor: pointer;
+  background-color: inherit;
+  border: none;
+  margin-right: 15px;
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .arrowIcon {
-    font-size: x-large;
-    color: white;
+  font-size: x-large;
+  color: white;
 }
 
-
 .rightContainer {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .inputContainer {
-    width: 80%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .input {
-    width: 200px;
-    height: 50px;
-    background-color: white;
-    cursor: default;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5px 3px 5px 3px;
+  width: 200px;
+  height: 50px;
+  background-color: white;
+  cursor: default;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 3px 5px 3px;
 }
 
 .text {
-    color: gray;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: medium;
-    word-wrap: break-word;
-    text-align: center;
+  color: gray;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: medium;
+  word-wrap: break-word;
+  text-align: center;
+}
+
+@media (max-width: 1250px) {
+  .leftContainer {
+    width: 40%;
+  }
+
+  .rightContainer {
+    width: 60%;
+  }
+
+  .iconContainer {
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1002px) {
+  .leftContainer {
+    width: 90%;
+  }
+
+  .rightContainer {
+    width: 100%;
+  }
+  .userContainer {
+    flex-direction: column;
+  }
+
+  .input {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+    .inputContainer {
+        width: 100%;
+    }
+}
+
+@media (max-width: 450px) {
+    .buttonContainer {
+        padding: 10px 20px;
+    }
 }
