--- a/src/app/(contact)/contact/contact.module.css
+++ b/src/app/(contact)/contact/contact.module.css
@@ -3,10 +3,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 0px 10px;
 }
 
 .heading {
-  font-size: 75px;
+  font-size: 70px;
   color: white;
   font-weight: 700;
   padding-top: 100px;
