--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -165,6 +165,7 @@
 
   .searchButtonWrapper {
     margin-left: 55%;
+    top: 9vh;
   }
 }
 
@@ -236,7 +237,7 @@
   .searchButtonWrapper {
     margin-left: 51%;
     padding: 5px 8px 5px 8px;
-    top: 12vh;
+    top: 10vh;
   }
 
   .searchButton {
@@ -260,14 +261,50 @@
   }
 
   .searchButtonWrapper {
-    margin-left: 51%;
+    margin-left: 49%;
     padding: 4px 6px 4px 6px;
-    top: 12vh;
+    top: 10vh;
   }
 
   .searchButton {
     font-size: medium;
   }
+
+  .textContainer {
+    padding: 5px 15px;
+  }
+
+}
+
+@media (max-width: 370px) {
+  @keyframes move-hand {
+    from {
+      margin-left: 3%;
+    }
+
+    to {
+      margin-left: 18%;
+    }
+  }
+
+  .handIcon {
+    width: 90px;
+  }
+
+  .searchButtonWrapper {
+    margin-left: 47%;
+    padding: 4px 6px 4px 6px;
+    top: 10vh;
+  }
+
+  .searchButton {
+    font-size: medium;
+  }
+
+  .textContainer {
+    padding: 5px 15px;
+  }
+
 }
 
 @media (max-width: 300px) {
@@ -286,7 +323,7 @@
   }
 
   .searchButtonWrapper {
-    margin-left: 51%;
+    margin-left: 46%;
     padding: 4px 6px 4px 6px;
     top: 12vh;
   }
@@ -294,4 +331,48 @@
   .searchButton {
     font-size: medium;
   }
-} 
+}
+
+@media (max-height: 1180px) {
+  .searchButtonWrapper {
+    margin-top: 2vh ;
+  }
+}
+
+@media (max-height: 950px) {
+  .searchButtonWrapper {
+    margin-top: 5vh ;
+  }
+}
+
+@media (max-height: 800px) {
+  .searchButtonWrapper {
+    margin-top: 7vh ;
+  }
+}
+
+@media (max-height: 700px) {
+  .searchButtonWrapper {
+    margin-top: 10vh ;
+  }
+}
+
+@media (max-height: 600px) {
+  .searchButtonWrapper {
+    margin-top: 12vh ;
+  }
+}
+
+@media (max-height: 550px) {
+  .searchButtonWrapper {
+    margin-top: 14vh ;
+  }
+}
+
+@media (max-height: 490px) {
+  .searchButtonWrapper {
+    margin-top: 16vh ;
+  }
+}
+
+
