--- a/src/components/asks/AskItem.module.css
+++ b/src/components/asks/AskItem.module.css
@@ -33,13 +33,13 @@
 }
 
 .askText {
+  width: 50vw;
+  padding: 20px 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #576a9a;
-  width: max-content;
   margin-left: 10%;
-  padding: 30px 50px;
   border-radius: 20px;
   cursor: default;
   margin-bottom: 20px;
@@ -86,6 +86,13 @@
   .askText {
     padding: 5% 8%;
     max-width: 90vw;
+  }
+
+}
+
+@media (max-width: 420px) {
+  .askText {
+    width: 70vw;
   }
 
 }
