--- a/src/app/(contact)/contact/contact.module.css
+++ b/src/app/(contact)/contact/contact.module.css
@@ -7,7 +7,7 @@
 }
 
 .heading {
-  font-size: 70px;
+  font-size: 60px;
   color: white;
   font-weight: 700;
   padding-top: 100px;
@@ -27,8 +27,13 @@
   word-wrap: break-word;
   color: white;
   line-height: 1.3;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 600;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+@media (max-width:450px) {
+  .heading {
+    font-size: 45px;
+  }
 }
