--- a/src/components/asks/AskItem.module.css
+++ b/src/components/asks/AskItem.module.css
@@ -55,11 +55,12 @@
 .modalWindow {
   width: 80vw;
   height: max-content;
-  min-height: 400px;
-  position: absolute;
+  min-height: 350px;
+  position: sticky;
   background-color: beige;
   z-index: 1;
   left: 10vw;
+  top: 20vh;
   border-radius: 20px;
   padding: 20px;
   display: flex;
@@ -73,6 +74,13 @@
   right: 20px;
   font-size: x-large;
   cursor: pointer;
+}
+
+.textDecoration {
+  font-size: x-large;
+  line-height: 1.3;
+  word-wrap: break-word;
+  word-spacing: 5px;
 }
 
 @media (max-width: 835px) {
