--- a/src/app/(about)/about/about.module.css
+++ b/src/app/(about)/about/about.module.css
@@ -12,3 +12,22 @@
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
+.textContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text {
+  width: 80%;
+  margin: auto;
+  word-wrap: break-word;
+  color: white;
+  line-height: 1.3;
+  font-size: 22px;
+  font-weight: 600;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
